--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,39 @@
 {
-  "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
+    // "compilerOptions": {
+    //     "target": "ES2020",
+    //     "useDefineForClassFields": true,
+    //     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    //     "module": "ESNext",
+    //     "skipLibCheck": true,
+    //     "moduleResolution": "bundler",
+    //     "allowImportingTsExtensions": true,
+    //     "resolveJsonModule": true,
+    //     "isolatedModules": true,
+    //     "noEmit": true,
+    //     "jsx": "react-jsx",
+    //     "strict": true,
+    //     "noUnusedLocals": true,
+    //     "noUnusedParameters": true,
+    //     "noFallthroughCasesInSwitch": true,
+    //     "baseUrl": ".",
+    //     "paths": {
+    //         "@/*": ["./src/*"]
+    //     }
+    // },
+    // "include": ["src"],
+    "files": [],
+    "references": [
+        {
+            "path": "./tsconfig.app.json"
+        },
+        {
+            "path": "./tsconfig.node.json"
+        }
     ],
-    "paths": {
-      "@/*": ["./*"]
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     }
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
 }
