--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
             - name: Build
               run: npm run build
 
+            - name: Create CNAME file
+              run: echo "artisearch.imalexblack.dev" > ./dist/CNAME
+
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
               with:
