--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.0.12",
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
