added linking between artworks and artists

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "postdeploy": "echo 'Deployed to GitHub Pages!'"
     },
     "dependencies": {
+        "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.0.12",
