--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
         "postdeploy": "echo 'Deployed to GitHub Pages!'"
     },
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.1.7",
+        "@radix-ui/react-dropdown-menu": "^2.1.7",
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-scroll-area": "^1.2.3",
-        "@radix-ui/react-slot": "^1.1.2",
-        "@radix-ui/react-tooltip": "^1.1.8",
+        "@radix-ui/react-separator": "^1.1.3",
+        "@radix-ui/react-slot": "^1.2.0",
+        "@radix-ui/react-tooltip": "^1.2.0",
         "@tailwindcss/vite": "^4.0.12",
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
@@ -37,6 +40,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@tauri-apps/cli": "^2.4.0",
         "@types/node": "^22.13.10",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
