--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "motion": "^12.5.0",
         "next-themes": "^0.4.5",
         "postcss": "^8.5.3",
+        "posthog-js": "^1.242.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
