--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-scroll-area": "^1.2.3",
         "@radix-ui/react-separator": "^1.1.3",
+        "@radix-ui/react-slider": "^1.3.4",
         "@radix-ui/react-slot": "^1.2.0",
         "@radix-ui/react-tooltip": "^1.2.0",
         "@tailwindcss/vite": "^4.0.12",
