--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "postdeploy": "echo 'Deployed to GitHub Pages!'"
     },
     "dependencies": {
+        "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.7",
         "@radix-ui/react-popover": "^1.1.6",
@@ -21,8 +22,7 @@
         "@radix-ui/react-slider": "^1.3.4",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tooltip": "^1.2.7",
-        "@tailwindcss/vite": "^4.0.12",
-        "autoprefixer": "^10.4.21",
+        "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -31,16 +31,13 @@
         "lucide-react": "^0.479.0",
         "motion": "^12.5.0",
         "next-themes": "^0.4.5",
-        "postcss": "^8.5.3",
         "posthog-js": "^1.242.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
         "react-router-dom": "^7.3.0",
         "sonner": "^2.0.1",
-        "tailwind-merge": "^3.0.2",
-        "tailwindcss": "^4.0.12",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwind-merge": "^3.0.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
@@ -50,11 +47,14 @@
         "@types/react-dom": "^19.0.4",
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "gh-pages": "^6.3.0",
         "globals": "^15.15.0",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.11",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.24.1",
         "vite": "^6.2.0"
